[4.13.0-Beta v1.4]
* Reimplemented the OctoPrint plugin
* Reimplemented a Custom Supports plugin
* Added ability to input accurate values in rotation tool
* Added "Scale to Max" button, though functionality needs work
* Fixed some firmware file locations and added a couple missing files
* Corrected issue that caused missing temperature values in Dual Extruder gcode files
* Corrected naming issue with PolyFlex 1.75mm filament

[4.13.0-Beta v1.3]
* "Ensure models are kept apart" setting is now checked by default
* "No Material" is now listed under "Dual Extrusion" as a brand name for the time being
* "Console" button on the Monitor screen is now enabled during a print
* Cura LE will once again react to LCD printer pauses, resumes, and stops
* Cura LE will now recognize a printer error has occured during a print and will drop the connection

[4.13.0-Beta v1.2]
* Fixed missing start and end gcode scripts on some configurations
* Fixed issue that caused application to crash upon creating a Mini 1 machine
* Fixed issue that caused a crash when creating a Workhorse with HS+ Tool Head
* Fixed broken quality profiles for NinjaFlex Edge on M175v2 Tool Heads

[4.13.0-Beta v1.1]
* Updated default settings to the "Advanced" preset instead of "Basic"

[4.13.0-Beta v1.0]
* Updated to be more in-line with upstream Cura as of Ultimaker Cura 4.13
* A more in-depth patch-notes will be created as we approach a full launch